--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=VT323" rel="stylesheet">
+    <script src="indexing.js" defer></script>
     <title>DevEd</title>
 </head>
 <body>
@@ -90,22 +91,5 @@
                 </div>
             </div>
     </section>
-    <script type="text/javascript">
-        document.getElementById("quiz").onclick = function () {
-            location.href = "quiz.html";
-        };
-        document.getElementById("mobile").onclick = function () {
-            location.href = "mobile.html";
-        };
-        document.getElementById("web").onclick = function () {
-            location.href = "web.html";
-        };
-        document.getElementById("desktop").onclick = function () {
-            location.href = "desktop.html";
-        };
-        document.getElementById("linux").onclick = function () {
-            location.href = "linux.html";
-        };
-    </script>
 </body>
 </html>
