--- a/desktop.html
+++ b/desktop.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="pages.css" media="all" />    
-    <link href="pages.css" rel="stylesheet">
+    <link href="css/pages.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500" rel="stylesheet">
     <title>Desktop Application</title>
 </head>
