--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="quiz.css" rel="stylesheet">
+    <link href="css/quiz.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=VT323" rel="stylesheet">
     <script src="quiz.js" defer></script>
@@ -18,7 +18,7 @@
         <form name="myform"  method="get" >
             
             <!-- get name  -->
-            <span id="askname">Please enter your name <b>before</b> proceeding</span><br>
+            <span id="askname">Please enter your name <span style="color:rgb(230, 83, 83)"><b>before</b></span> proceeding</span><br>
             <input type="text" name="username" placeholder="Name" id="name">
 
             <!-- get languages  -->
