--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=VT323" rel="stylesheet">
     <script src="indexing.js" defer></script>
@@ -14,7 +14,7 @@
     <section>
         <div class="container title">
             <span style="font-family: VT323; font-size: 100px">DevEd</span><br>
-            <span>Explore developement paths</span>
+            <span style="font-size: 27px;">Explore developement paths</span>
         </div>
     </section>
     <section>
@@ -57,19 +57,19 @@
     </section>
     <section>
         <div class="container title">
-            <span>Languages</span>
+            <span style="font-size: 27px;"> Languages</span>
         </div>
     </section>
     <section>
         <div class="container">
             <div class="flexbox-container">
-                <div class="devpath" id="Javascipt">
+                <div class="devpath" id="javascript">
                     <div class="flexbox-container-vertical" >
                         <img src="images/languages/javascript.png" alt="Javascipt icon" style="max-width: 60%; margin-top: 20px;">
                         <span class="devpathTitle" style="font-weight: bold;">JavaScript</span>
                     </div>
                 </div>
-                <div class="devpath" id="web">
+                <div class="devpath" id="python">
                     <div class="flexbox-container-vertical" >
                         <img src="images/languages/python.png" alt="python icon" style="max-width: 60%; margin-top: 20px;">
                         <span class="devpathTitle" style="font-weight: bold;">Python</span>
@@ -77,13 +77,13 @@
                 </div>
             </div>
             <div class="flexbox-container">
-                <div class="devpath" id="desktop">
+                <div class="devpath" id="java">
                     <div class="flexbox-container-vertical" >
                         <img src="images/languages/java.png" alt="Java icon" style="max-width: 60%; margin-top: 20px;">
                         <span class="devpathTitle" style="font-weight: bold;">Java</span>
                     </div>
                 </div>
-                <div class="devpath" id="linux">
+                <div class="devpath" id="cplusplus">
                     <div class="flexbox-container-vertical" >
                         <img src="images/languages/cplusplus.png" alt="Cplusplus icon" style="max-width: 60%; margin-top: 20px;">
                         <span class="devpathTitle" style="font-weight: bold;">C/C++</span>
