--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styles.css" rel="stylesheet">
+    <link href="css/welcome.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=VT323" rel="stylesheet">
     <script src="welcome.js" defer></script>
